--- a/styles/style.css
+++ b/styles/style.css
@@ -304,8 +304,12 @@ center {
     .logotop img {
         width: 2em;
         margin-right: 10px;
+        transition: all 0.5s ease-in-out;
 
+    }
 
+    .logotop img:hover {
+        width: 2.2em;
     }
 
     .foot-wrap {
@@ -359,10 +363,14 @@ center {
 
     .button {
         display: block;
+        line-height: 100%;
+        height: 25px;
         background-color: aqua;
+        border-radius: 5px;
     }
 
     .button a {
+        line-height: 25px;
         color: black;
         text-decoration: none;
         padding: 15px;
